--- a/action.yaml
+++ b/action.yaml
@@ -27,7 +27,7 @@ inputs:
   docker-tag:
     description: "Merly Mentor Docker image tag"
     required: false
-    default: "v0.10.1"
+    default: "action-test"
     pattern: '^[A-Za-z0-9._:-]+$'
   max-issue-count:
     description: "Maximum number of new issues allowed before failing the pipeline"
